force-app/main/default/objects/ProjectCust__c/ProjectCust__c.object-meta.xml
<CustomObject>
    <label>ProjectCust</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProjectCusts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>