force-app/main/default/objects/ProjectCust__c/fields/isDeadLine__c.field-meta.xml
<CustomField>
    <fullName>isDeadLine__c</fullName>
    <formula>IF(    End_Date__c  - Start_Date__c &lt; 8 , TRUE , FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isDeadLine</label>
    <type>Checkbox</type>
</CustomField>