force-app/main/default/objects/ProjectCust__c/fields/isDeadlineToday__c.field-meta.xml
<CustomField>
    <fullName>isDeadlineToday__c</fullName>
    <formula>IF ( TODAY() -  End_Date__c &gt; 0 , TRUE ,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isDeadlineToday</label>
    <type>Checkbox</type>
</CustomField>