force-app/main/default/objects/ProjectCust__c/validationRules/EndGreater.validationRule-meta.xml
<ValidationRule>
    <fullName>EndGreater</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c -  End_Date__c  &gt; 0</errorConditionFormula>
    <errorMessage>Start Date Should be greater than end date</errorMessage>
</ValidationRule>