force-app/main/default/objects/ProjectCust__c/validationRules/PercentGreater.validationRule-meta.xml
<ValidationRule>
    <fullName>PercentGreater</fullName>
    <active>true</active>
    <errorConditionFormula>Project_Progress__c &gt; 1</errorConditionFormula>
    <errorMessage>Progress should be less than or equal to 100.</errorMessage>
</ValidationRule>